# NoteForge

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
evaluations/: fix_retrieval_one.md  plan_retrieval_one.md
evaluations/issue_one/: bug_issue_one.md  fix_issue_one.md
evaluations/issue_two/: fix_issue_two.md
evaluations/to_do/: supposed_fix_results.md  test - old.md
old_version/: graph.py  nodes.py  react_node.py
src/config/: config.py
src/document_ingestion/: document_processor.py
src/graph_builder/: graph.py
src/nodes/: react_node.py
src/state/: state.py
src/vector_store/: store.py
